modified history and readme

--- a/History.rdoc
+++ b/History.rdoc
@@ -1,15 +1,20 @@
-=== Version 2.0.0 / 2011-07-xx
+=== Version 2.0.0 / 2011-07-06
 
- * introducing Page Objects - generate them with `watirsplash page` generator
- * use WatirSplash::Browser.new to open up a browser and set it to RSpec-s formatter too
- * removed ui-test-common functionality - just load it's environment.rb if you really need to use it
- * do not load framework automatically anymore when requiring watirsplash - use WatirSplash::Util.load_framework method in environment.rb or config.rb instead
- * do not maximize browser window anymore automatically
- * load environment.rb directly in .rspec file
- * added :default option for frameworks
- * bumped dependencies for win32screenshot, watir, firewatir and watir-webdriver
- * use Bundler for specifying dependencies from now on
+ * added Page Objects support - generate them with `watirsplash page` generator 
+ * added #during RSpec matcher
+ * added :default option for frameworks 
+ * using Bundler for specifying runtime dependencies 
+ * loading environment.rb directly from .rspec file
+ * use WatirSplash::Browser.new to open up a browser and set it up with RSpec's formatter
+ * use WatirSplash::Browser.current method to access current browser object globally
+ * use @browser variable in WatirSplash::Page objects to access browser object 
  * moved File.path and File.native_path methods to WatirSplash::Util.file_path and .file_native_path since File.path method conflicts with Ruby 1.9
+ * removed ui-test-common functionality - just load it's environment.rb if you really need to use it
+ * removed deprecated #in RSpec matcher
+ * do not load framework automatically anymore when requiring watirsplash - use WatirSplash::Util.load_framework method in environment.rb or config.rb instead
+ * do not open browser window automatically anymore - use RSpec.configure block in config.rb if needed
+ * do not maximize browser window anymore automatically - use RSpec configure block in config.rb if needed
+ * bumped dependencies for win32screenshot, watir, firewatir and watir-webdriver
   
   PS! This version is not fully backwards compatible due to some core changes, but it is possible to make your old project working with it.
 
