--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 2.3.0 / 2011-09-10
+
+ * add JavaScript errors detection for all supported frameworks & browsers - read more from wiki: https://github.com/jarmo/WatirSplash/wiki/Detecting-JavaScript-Errors
+
 === Version 2.2.0 / 2011-09-10
 
  * watir-webdriver/firefox is now the default framework under Linux and OS X
