--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,11 @@
+=== Version 2.3.2 / 2011-09-25
+
+ * add support for spork-local_process
+
+=== Version 2.3.1 / 2011-09-11
+
+ * minor fix in WatirSplash::Page::Base
+
 === Version 2.3.0 / 2011-09-10
 
  * add JavaScript errors detection for all supported frameworks & browsers - read more from wiki: https://github.com/jarmo/WatirSplash/wiki/Detecting-JavaScript-Errors
