--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,9 @@
+=== Version 2.4.0 / 2011-09-25
+
+ * add WatirSplash::Browser.exist? method
+ * redirect all method invocations on WatirSplash::Browser.current when method doesn't exist in WatirSplash::Browser class itself
+
+
 === Version 2.3.2 / 2011-09-25
 
  * add support for spork-local_process
