--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,7 @@
 * Web: http://github.com/jarmo/WatirSplash
 * Author: Jarmo Pertman (mailto:jarmo.p[at]gmail.com)
 
-{<img src="http://www.pledgie.com/campaigns/16193.png?skin_name=chrome" />}[http://www.pledgie.com/campaigns/16193]
+{<img src="http://www.pledgie.com/campaigns/16193.png" />}[http://www.pledgie.com/campaigns/16193]
 
 WatirSplash makes browser-based web page testing in Ruby splashin' easy.
 It combines Watir, FireWatir or Watir-WebDriver for controlling the browser, 
